[tool.poetry]
name = "blog_uploader"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.8.0"
requests = "^2.27.1"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
dnspython = "^2.2.1"
PyYAML = "^6.0"
Jinja2 = "^3.1.1"
boto3 = "^1.21.46"
pendulum = "^2.1.2"
pandocfilters = "^1.5.0"
orjson = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
show_error_codes = true
